# latrodectus-gn

./: .clang-format  .env.example  .gitignore  .gn-version  README.md  package.json
chromium_src/gn/: functions.h  functions_target.cc  gn_main.cc  import_manager.cc  loader.cc  scope.cc  scope.h  setup.cc  template.cc
docs/: chromium_src_override.md  declare_gni_updates.md  disable_file.md  disable_target.md  disable_template_instance.md  macro_patterns.md  scope_analysis.md  update_gni_file.md  update_target.md
patches/: src-gn-functions.cc.patch  src-gn-functions_target.cc.patch  src-gn-gn_main.cc.patch  src-gn-import_manager.cc.patch  src-gn-loader.cc.patch  src-gn-scope.cc.patch  src-gn-setup.cc.patch  src-gn-template.cc.patch
scripts/: applyPatches.js  build.js  deploy.js  format.js  init.js  sync.js  updatePatches.js
scripts/lib/: util.js
test_project/: BUILD.gn  BUILDCONFIG.gn  config.gni  scope_analysis.md  updates.gni
test_project/disabled_dir/: BUILD.gn
test_project/normalize_test/: BUILD.gn
test_project/subdir/: BUILD.gn
test_project/toolchain/: BUILD.gn
tests/: __init__.py  gn_test_base.py  run_tests.py  test_declare_gni_updates.py  test_disable_file.py  test_disable_target.py  test_disable_template_instance.py  test_gn_check.py  test_update_gni_file.py  test_update_target.py  test_update_template_instance.py
