# =============================================================================
# Test Project for update_target and update_template_instance
# =============================================================================

source_set("helper") {
  sources = []
}

# =============================================================================
# TEST 1: Basic update_target
# =============================================================================
# The update is registered BEFORE the target is defined.
# When group("basic") runs, the update { deps += [":helper"] } is applied.

update_target("//:basic") {
  deps += [ ":helper" ]
}

group("basic") {
  deps = []
}
# Result: deps = [":helper"]

# =============================================================================
# TEST 2: Multiple updates for same target
# =============================================================================
# Multiple updates are applied in order.

update_target("//:multi") {
  deps += [ ":helper" ]
}

update_target("//:multi") {
  defines = [ "UPDATED=1" ]
}

source_set("multi") {
  sources = []
  deps = []
}
# Result: deps = [":helper"], defines = ["UPDATED=1"]

# =============================================================================
# TEST 3: Update with existing values (+=)
# =============================================================================
# Shows that += correctly reads the target's existing value.

update_target("//:append") {
  sources += [ "extra.cc" ]  # Reads sources=["main.cc"], appends "extra.cc"
}

source_set("append") {
  sources = [ "main.cc" ]
}
# Result: sources = ["main.cc", "extra.cc"]

# =============================================================================
# TEST 4: update_template_instance
# =============================================================================
# Updates a target created by a template, not the template itself.

template("my_template") {
  group(target_name) {
    forward_variables_from(invoker, "*")
  }
}

update_template_instance("//:from_template") {
  deps += [ ":helper" ]
}

my_template("from_template") {
  deps = []
}
# Result: deps = [":helper"]

# =============================================================================
# TEST 5: disable_target
# =============================================================================
# Disables a target, making it a no-op (empty sources, deps, etc.)

disable_target("//:disabled_target")

source_set("disabled_target") {
  sources = [ "should_not_exist.cc" ]
  deps = [ ":helper" ]
}
# Result: sources = [], deps = []

# =============================================================================
# Aliases for backward compatibility with old test names
# =============================================================================
group("my_target") {
  deps = [ ":basic" ]
}

group("templated") {
  deps = [ ":from_template" ]
}
