# =============================================================================
# Test Project for update_target and update_template_instance
# =============================================================================

# Import updates from separate file (mimics latrodectus/gn/updates.gni pattern)
import("//updates.gni")

source_set("helper") {
  sources = []
}

# Dependency used by registration context test
group("config_dep") {}

# =============================================================================
# TEST 0: Label normalization
# =============================================================================
# Tests that "//normalize_test" is normalized to "//normalize_test:normalize_test"

update_target("//normalize_test") {
  sources += [ "normalized.cc" ]
  deps += [ ":helper" ]
}

disable_target("//normalize_test:disabled")

# =============================================================================
# TEST 1: Basic update_target
# =============================================================================
# The update is registered BEFORE the target is defined.
# When group("basic") runs, the update { deps += [":helper"] } is applied.

update_target("//:basic") {
  deps += [ ":helper" ]
}

group("basic") {
  deps = []
}
# Result: deps = [":helper"]

# =============================================================================
# TEST 2: Multiple updates for same target
# =============================================================================
# Multiple updates are applied in order.

update_target("//:multi") {
  deps += [ ":helper" ]
}

update_target("//:multi") {
  defines = [ "UPDATED=1" ]
}

source_set("multi") {
  sources = []
  deps = []
}
# Result: deps = [":helper"], defines = ["UPDATED=1"]

# =============================================================================
# TEST 3: Update with existing values (+=)
# =============================================================================
# Shows that += correctly reads the target's existing value.

update_target("//:append") {
  sources += [ "extra.cc" ]  # Reads sources=["main.cc"], appends "extra.cc"
}

source_set("append") {
  sources = [ "main.cc" ]
}
# Result: sources = ["main.cc", "extra.cc"]

# =============================================================================
# TEST 4: update_template_instance
# =============================================================================
# Updates a target created by a template, not the template itself.

template("my_template") {
  group(target_name) {
    forward_variables_from(invoker, "*")
  }
}

update_template_instance("//:from_template") {
  deps += [ ":helper" ]
}

my_template("from_template") {
  deps = []
}
# Result: deps = [":helper"]

# =============================================================================
# TEST 5: disable_target
# =============================================================================
# Disables a target, making it a no-op (empty sources, deps, etc.)

disable_target("//:disabled_target")

source_set("disabled_target") {
  sources = [ "should_not_exist.cc" ]
  deps = [ ":helper" ]
}
# Result: sources = [], deps = []

# =============================================================================
# TEST 6: Error for deps on disabled target
# =============================================================================
# Uncommenting this target causes gn gen to fail with an error because it
# depends on a disabled target.

# group("uses_disabled") {
#   deps = [ ":disabled_target" ]
# }

# =============================================================================
# TEST 6b: disable_template_instance
# =============================================================================
# Disables a template instantiation, creating an empty placeholder target.

disable_template_instance("//:disabled_template_target")

my_template("disabled_template_target") {
  deps = [ ":helper" ]
}
# Result: Empty placeholder group target (template body skipped)

# =============================================================================
# TEST 6c: Error for deps on disabled template instance
# =============================================================================
# Uncommenting this target causes gn gen to fail with an error because it
# depends on a disabled template instance.

# group("uses_disabled_template") {
#   deps = [ ":disabled_template_target" ]
# }

# =============================================================================
# TEST 7: Wildcard disable_target
# =============================================================================
# disable_target("//subdir:*") disables all targets in //subdir/BUILD.gn
# Uncommenting the line below causes gn gen to fail with an error because
# the wildcard disables all targets in //subdir.

# group("wildcard_test") {
#   deps = [ "//subdir:target_a" ]
# }

# =============================================================================
# TEST 8: disable_file
# =============================================================================
# disable_file prevents a BUILD.gn from being loaded at all.
# The file at //disabled_dir/BUILD.gn contains assert(false), which would
# fail if parsed.
#
# To test disable_file:
# 1. Comment out the disable_file line below
# 2. Uncomment the group("disable_file_test") that depends on disabled_dir
# 3. Run: ./out/gn gen test_project/out --root=test_project
# 4. Observe the assert(false) error from //disabled_dir/BUILD.gn
# 5. Uncomment disable_file and run again - build succeeds (target not found)
#
# Note: When a file is disabled, its targets don't exist, so dependencies
# on them will fail with "unknown target" - this is expected behavior.

# Uncomment to prevent //disabled_dir/BUILD.gn from being parsed:
# disable_file("//disabled_dir/BUILD.gn")

# Uncomment to trigger loading of //disabled_dir/BUILD.gn:
# group("disable_file_test") {
#   deps = [ "//disabled_dir:should_not_exist" ]
# }

# =============================================================================
# TEST 9: Registration context variables
# =============================================================================
# Tests that update_target blocks can access variables from imports at
# registration time (where update_target() was called).
#
# The update for this target is defined in //updates.gni, which imports
# //config.gni. The update block uses test_feature_enabled and test_extra_dep
# from that import.
#
# Before the fix (633ed94), this would fail with "undefined identifier" because
# NonRecursiveMergeTo only copied direct values, not the parent chain where
# imports reside.

group("registration_context_test") {
  deps = []
}
# Result: deps = [":config_dep"] (because test_feature_enabled=true)

# =============================================================================
# TEST: Built-in variables in update blocks (root_gen_dir, etc.)
# =============================================================================
# Tests that ScopePerFileProvider is available during update block execution.
# The update in updates.gni uses $root_gen_dir which requires the provider.

group("builtin_vars_test") {
}

# =============================================================================
# Aliases for backward compatibility with old test names
# =============================================================================
group("my_target") {
  deps = [ ":basic" ]
}

group("templated") {
  deps = [ ":from_template" ]
}

# Include normalize_test targets
group("normalize_test_group") {
  deps = [ "//normalize_test:normalize_test" ]
}
