# Test updates file for update_target registration context test
# This simulates //latrodectus/gn/updates.gni in the real project
#
# The key test: variables from imports here (test_feature_enabled, test_extra_dep)
# must be accessible in the update_target block.

import("//config.gni")

# TEST: Update block uses variables from imported config.gni
# Before the fix (633ed94), this would fail with "undefined identifier"
# because the import's parent chain was lost during NonRecursiveMergeTo.
update_target("//:registration_context_test") {
  if (test_feature_enabled) {
    deps += [ test_extra_dep ]
  }
}

# TEST: Update block uses built-in variables like root_gen_dir
# This tests that ScopePerFileProvider is available during update block execution.
# Without the fix, this would fail with "root_gen_dir is not currently in scope"
update_target("//:builtin_vars_test") {
  # Use root_gen_dir - the test passes if this doesn't error with "undefined"
  # We use assert() to consume the value and verify it's not empty
  assert(root_gen_dir != "", "root_gen_dir should be available")
  assert(current_toolchain != "", "current_toolchain should be available")
  assert(root_build_dir != "", "root_build_dir should be available")
}
