# =============================================================================
# disable_file test
# =============================================================================
# This file should NEVER be parsed when disable_file("//disabled_dir/BUILD.gn")
# is called. If it is parsed, the assert below will fail.

assert(false, "This file should not be parsed! disable_file is not working.")

source_set("should_not_exist") {
  sources = [ "fake.cc" ]
}
