# Test label normalization: "//normalize_test" -> "//normalize_test:normalize_test"

source_set("normalize_test") {
  sources = []
  deps = []
}
# Result: sources = ["normalized.cc"], deps = ["//:helper"]

source_set("disabled") {
  sources = [ "should_not_exist.cc" ]
}
# Result: sources = [] (disabled)
