# =============================================================================
# Wildcard disable_target test
# =============================================================================
# disable_target("//subdir:*") disables ALL targets in this file.

disable_target("//subdir:*")

source_set("target_a") {
  sources = [ "nonexistent_a.cc" ]
}
# Result: sources = [] (disabled by wildcard)

source_set("target_b") {
  sources = [ "nonexistent_b.cc" ]
}
# Result: sources = [] (disabled by wildcard)

# Note: Since all targets in this file are disabled by the wildcard,
# other targets cannot depend on them without getting an error.
# This file demonstrates that the wildcard matching works.
#
# To test: Uncomment the reference in //BUILD.gn and observe the error.
